--- a/styles/text.css
+++ b/styles/text.css
@@ -1,6 +1,12 @@
-.video-title
+  p
   {
     font-family: Arial;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .video-title
+  {
     font-weight: bold;
     font-size: 18px;
     width: 300px;
@@ -11,17 +17,48 @@
 
   .video-stats
   {
-    font-family: Arial;
     font-size: 14px;
     color: rgb(97, 97, 97);
-    margin-top: 0;
     margin-bottom: 20px;
   }
 
   .video-author
   {
-    font-family: Arial;
     color: rgb(97, 97, 97);
-    font size: 14px;
-    margin-top: 0;
+    font-size: 14px;
+    margin-bottom: 5px;
+  }
+
+  .video-description
+  {
+      font-size: 14px;
+      color: rgb(97, 97, 97);
+      width: 280px;
+      line-height: 22px;
+      margin-top: 20px;
+      margin-bottom: 100px;
+      
+  }
+
+  .apple-text
+  {
+    margin-bottom: 50px;
+    font-size: 14px;
+    background-color: rgb(227, 65, 64);
+    color: white;
+    text-align: center;
+    padding-top: 18px;
+    padding-bottom: 18px;
+
+  }
+
+  .shop-link
+  {
+    cursor: pointer;
+  }
+
+  .shop-link:hover
+  {
+    text-decoration: underline;
+
   }
