--- a/styles/header.css
+++ b/styles/header.css
@@ -5,26 +5,119 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  
 }
 
 .left-section
 {
-  background-color: lightblue;
-  width: 150px;
+  display: flex;
+  align-items: center;
   
+}
+
+.hamburger-menu
+{
+  height: 24px;
+  margin-left: 24px;
+  margin-right: 24px;
+}
+
+.youtube-logo
+{
+  height: 20px;
 }
 
 .middle-section
 {
-  background-color: lightpink;
   flex: 1;
   margin-left: 70px;
   margin-right: 35px;
-  max-width: 300px;
+
+  display: flex;
+  align-items: center;
+}
+
+.search-bar
+{
+  flex: 1;
+  height: 36px;
+  padding-left: 10px;
+  font-size: 16px;
+  border-width: 0.5px;
+  border-style: solid;
+  border-color: rgb(190, 190, 190);
+  box-shadow: none;
+  width: 0;
+}
+
+.search-bar::placeholder
+{
+  font-family: Roboto,Arial;
+  font-size: 16px;
+}
+
+.search-button
+{
+  height: 40px;
+  width: 66px;
+  background-color: rgb(240, 240, 240);
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(190, 190, 190);
+  margin-left: -1px;
+  margin-right: 10px;
+}
+
+.search-icon
+{
+  margin-top: 4px;
+  height: 25px;
+}
+
+.voice-button
+{
+  height: 40px;
+  width: 40px;
+  border-radius: 20px;
+  border: none;
+  background-color: rgb(245, 245, 245);
+
+}
+
+.voice-icon
+{
+  height: 24px;
+  margin-top: 4px;
 }
 
 .right-section
 {
-  background-color: lightblue;
-  width: 200px;
+  margin-right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-shrink: 0;
+
+  width: 180px;
+}
+
+.upload-icon
+{
+  height: 24px;
+}
+
+.youtube-apps-icon
+{
+  height: 24px;
+}
+
+.notifications-icon
+{
+  height: 24px;
+}
+
+.current-user-picture
+{
+  height: 32px;
+  border-radius: 16px;
 }
