--- a/styles/header.css
+++ b/styles/header.css
@@ -16,6 +16,8 @@
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: rgb(218, 218, 218);
+
+  z-index: 100;
   
 }
 
@@ -125,6 +127,27 @@
 .notifications-icon
 {
   height: 24px;
+}
+
+.notifications-icon-container
+{
+  position: relative;
+}
+
+.notifications-count
+{
+  position: absolute;
+  top: -2px;
+  right: -5px;
+
+  background-color: rgb(200, 0, 0);
+  color: white;
+  font-family: Roboto, Arial;
+  font-size: 11px;
+  padding: 2px;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-radius: 10px;
 }
 
 .current-user-picture
