--- a/styles/video.css
+++ b/styles/video.css
@@ -15,7 +15,7 @@
 
       .thumbnail-DIV
       {
-        margin-bottom: 12px;
+        margin-bottom: 8px;
         position: relative;
       }
 
@@ -39,7 +39,7 @@
 
       .prof-pic
       {
-        width: 80%;
+        width: 36px;
         border-radius: 50px;
       }
 
@@ -50,7 +50,7 @@
         font-size: 14px;
         font-weight: 500;
         line-height: 14px;
-        margin-bottom: 12px;
+        margin-bottom: 10px;
       }
 
       .video-author,
